--- a/SkinTrack/backend/.env.example
+++ b/SkinTrack/backend/.env.example
@@ -1,4 +1,4 @@
 PORT=5000
-MONGODB_URI=mongodb+srv://<user>:<password>@<cluster-url>/skintrack?retryWrites=true&w=majority
+MONGODB_URI=mongodb+srv://<user>:<password>@<cluster-url>/skintrack?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=troque-para-um-segredo-forte
 CLIENT_URL=http://localhost:5173
